<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_weather">Current weather</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="go_back">Go back</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="settings">Settings</string>
    <string name="location_instructions">Please turn on Location Settings to proceed.</string>
    <string name="location_permission">Location Permission</string>
    <string name="allow_permission">Allow permission</string>
    <string name="default_location_note">Permission not granted. Showing default location</string>
    <string name="loading_data">Loading data…</string>
    <string name="no_connection">No Connection</string>
    <string name="wind_text">Wind: %s mph</string>
    <string name="wind_degree">Wind dir: %s °NW</string>
    <string name="humidity_text">Humidity: %s</string>
    <string name="sunrise_text">Sunrise: %s</string>
    <string name="sunset_text">Sunset: %s</string>
    <string name="visibility_text">Visibility: %s km</string>
    <string name="feels_like_text">Feels like: %s</string>
</resources>